--- a/DesafioFirebase/app/build.gradle
+++ b/DesafioFirebase/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -27,6 +28,11 @@ android {
 dependencies {
     //material
     implementation 'com.google.android.material:material:1.2.1'
+
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:26.2.0')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-auth:20.0.2'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDependency
